Initial commit: Portfolio website

--- a/NITIN_SINGH/index.html
+++ b/NITIN_SINGH/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="logo">
-                <a href="https://NITIN-SINGH-2611.github.io/Portfolio/" class="logo-link">Nitin Singh Samant</a>
+                <a href="https://NITIN-SINGH-2611.github.io/Portfolio_Nitin/" class="logo-link">Nitin Singh Samant</a>
             </div>
             <ul class="nav-menu" id="navMenu">
                 <li><a href="#home" class="nav-link">Home</a></li>
@@ -40,7 +40,7 @@
                 <p class="hero-subtitle">Java Backend Developer & DevOps Engineer</p>
                 <p class="hero-description">Building scalable microservices, REST APIs, and cloud-native automation solutions</p>
                 <div class="hero-buttons">
-                    <a href="https://NITIN-SINGH-2611.github.io/Portfolio/" class="btn btn-primary portfolio-link" id="portfolioLink">
+                    <a href="https://NITIN-SINGH-2611.github.io/Portfolio_Nitin/" class="btn btn-primary portfolio-link" id="portfolioLink">
                         <i class="fas fa-globe"></i> Nitin
                     </a>
                     <a href="#projects" class="btn btn-secondary">View My Work</a>
