--- a/NITIN_SINGH/nitin.html
+++ b/NITIN_SINGH/nitin.html
@@ -83,7 +83,7 @@
 </head>
 <body>
     <div class="container">
-        <a href="https://NITIN-SINGH-2611.github.io/Portfolio/" class="link" id="nitinLink">
+        <a href="https://NITIN-SINGH-2611.github.io/Portfolio_Nitin/" class="link" id="nitinLink">
             Nitin
         </a>
         <p class="subtitle">Click to view my portfolio</p>
@@ -92,7 +92,7 @@
     <script>
         // Auto-redirect after 3 seconds (optional - remove if you don't want this)
         // setTimeout(function() {
-        //     window.location.href = 'https://NITIN-SINGH-2611.github.io/Portfolio/';
+        //     window.location.href = 'https://NITIN-SINGH-2611.github.io/Portfolio_Nitin/';
         // }, 3000);
     </script>
 </body>
