Update portfolio: professional summary, EmailJS integration, and styling improvements

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Nitin Singh Samant - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 </head>
 <body>
     <!-- Navigation -->
@@ -17,6 +18,7 @@
             <ul class="nav-menu" id="navMenu">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
+                <li><a href="#experience" class="nav-link">Experience</a></li>
                 <li><a href="#skills" class="nav-link">Skills</a></li>
                 <li><a href="#projects" class="nav-link">Projects</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
@@ -78,21 +80,16 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>
-                        I'm a results-driven Java Backend Developer with hands-on DevOps experience, specializing in building 
-                        scalable Spring Boot microservices, REST APIs, and cloud-native automation workflows. With over 2 years 
-                        of professional experience, I have developed strong expertise in creating high-performance backend services 
-                        that drive business value and improve system reliability.
+                        I'm a results-driven Java Backend Engineer with expertise in designing and developing scalable Spring Boot 
+                        microservices, RESTful APIs, and enterprise backend systems. With a strong foundation in object-oriented 
+                        programming, data structures, SQL optimization, and system integration, I deliver high-performance, reliable, 
+                        and maintainable software solutions.
                     </p>
                     <p>
-                        My hands-on expertise spans Azure Cloud infrastructure, GitHub Actions, and CI/CD pipeline development, 
-                        where I focus on automating deployment processes and improving system efficiency. I am adept at managing 
-                        the complete software lifecycle, from design to deployment, with a strong emphasis on modular architecture 
-                        and clean code principles.
-                    </p>
-                    <p>
-                        I have extensive experience in Neo4j database optimization and developing robust backend services that 
-                        handle high traffic and complex business logic. My approach combines technical excellence with practical 
-                        problem-solving, ensuring that every solution I build is not only performant but also maintainable and scalable.
+                        My hands-on experience includes building CI/CD pipelines, containerization, and cloud deployment on Microsoft 
+                        Azure. I specialize in creating robust backend services that handle complex business logic while maintaining 
+                        system reliability and scalability. My approach combines technical excellence with practical problem-solving 
+                        to drive business value.
                     </p>
                     <p>
                         <strong>Date of Birth:</strong> November 26, 2001
@@ -115,6 +112,44 @@
                 <div class="about-image">
                     <div class="image-card">
                         <img src="profile-picture.jfif" alt="Nitin Singh Samant" class="profile-image-about">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Experience Section -->
+    <section id="experience" class="experience">
+        <div class="container">
+            <h2 class="section-title">Professional Experience</h2>
+            <div class="experience-timeline">
+                <div class="experience-item">
+                    <div class="experience-header">
+                        <div class="experience-company">
+                            <h3>JIO Platforms Limited</h3>
+                            <span class="experience-period">Oct 2023 – Present</span>
+                        </div>
+                    </div>
+                    <div class="experience-content">
+                        <div class="experience-project">
+                            <h4><i class="fas fa-project-diagram"></i> Project: Defect Dashboard (React)</h4>
+                            <p>Designed and developed a real-time defect monitoring dashboard using React, enabling engineering teams to track production issues more efficiently and reducing defect triage time by <strong>35%</strong>.</p>
+                        </div>
+                        <div class="experience-project">
+                            <h4><i class="fas fa-chart-bar"></i> Project: EDA for Production Defects</h4>
+                            <p>Built automated data analysis pipelines using Python and Jupyter Notebook to extract, analyze, and restructure large volumes of production defect data, improving root-cause analysis speed by <strong>40%</strong> and enhancing reporting accuracy.</p>
+                        </div>
+                        <div class="experience-project">
+                            <h4><i class="fas fa-cogs"></i> Project: BAU Enhancements</h4>
+                            <p>Delivered continuous backend improvements and production fixes across multiple releases, resolving critical defects and improving overall system stability by <strong>25%</strong>.</p>
+                        </div>
+                        <div class="experience-achievements">
+                            <h4><i class="fas fa-users"></i> Collaboration & Leadership</h4>
+                            <ul>
+                                <li>Collaborated closely with PMO teams, MUT testers, SIT teams, and Replica teams to coordinate testing cycles, prioritize defect resolution, and ensure smooth production releases under strict delivery timelines.</li>
+                                <li>Demonstrated strong ownership by managing high-pressure deadlines, aligning deliverables with PMO requirements, and ensuring timely bug fixes across environments.</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
