Add Education section with Chandigarh University and Kendriya Vidyalaya details

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
                 <li><a href="#experience" class="nav-link">Experience</a></li>
+                <li><a href="#education" class="nav-link">Education</a></li>
                 <li><a href="#skills" class="nav-link">Skills</a></li>
                 <li><a href="#projects" class="nav-link">Projects</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
@@ -149,6 +150,86 @@
                                 <li>Collaborated closely with PMO teams, MUT testers, SIT teams, and Replica teams to coordinate testing cycles, prioritize defect resolution, and ensure smooth production releases under strict delivery timelines.</li>
                                 <li>Demonstrated strong ownership by managing high-pressure deadlines, aligning deliverables with PMO requirements, and ensuring timely bug fixes across environments.</li>
                             </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Education Section -->
+    <section id="education" class="education">
+        <div class="container">
+            <h2 class="section-title">Education</h2>
+            <div class="education-timeline">
+                <!-- MBA -->
+                <div class="education-item">
+                    <div class="education-icon">
+                        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/4a/Chandigarh_University_logo.png/220px-Chandigarh_University_logo.png" alt="Chandigarh University" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                        <div class="education-icon-fallback" style="display:none;">
+                            <i class="fas fa-university"></i>
+                        </div>
+                    </div>
+                    <div class="education-content">
+                        <div class="education-header">
+                            <h3>MBA (General) with IT, Data Science, and AI</h3>
+                            <span class="education-institution">Chandigarh University</span>
+                            <span class="education-period">Aug 2024 – Present</span>
+                            <span class="education-status">Pursuing</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- B.Tech -->
+                <div class="education-item">
+                    <div class="education-icon">
+                        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/4a/Chandigarh_University_logo.png/220px-Chandigarh_University_logo.png" alt="Chandigarh University" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                        <div class="education-icon-fallback" style="display:none;">
+                            <i class="fas fa-university"></i>
+                        </div>
+                    </div>
+                    <div class="education-content">
+                        <div class="education-header">
+                            <h3>B.Tech in Computer Science and Engineering</h3>
+                            <span class="education-institution">Chandigarh University</span>
+                            <span class="education-period">Aug 2019 – Jun 2023</span>
+                            <span class="education-cgpa">CGPA: 7.3</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- HSC -->
+                <div class="education-item">
+                    <div class="education-icon">
+                        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/5a/Kendriya_Vidyalaya_logo.svg/200px-Kendriya_Vidyalaya_logo.svg.png" alt="Kendriya Vidyalaya" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                        <div class="education-icon-fallback" style="display:none;">
+                            <i class="fas fa-school"></i>
+                        </div>
+                    </div>
+                    <div class="education-content">
+                        <div class="education-header">
+                            <h3>Higher Secondary Certificate (HSC)</h3>
+                            <span class="education-institution">Kendriya Vidyalaya AFS, Jorhat</span>
+                            <span class="education-period">2019</span>
+                            <span class="education-cgpa">CGPA: 7.77</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- SSC -->
+                <div class="education-item">
+                    <div class="education-icon">
+                        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/5a/Kendriya_Vidyalaya_logo.svg/200px-Kendriya_Vidyalaya_logo.svg.png" alt="Kendriya Vidyalaya" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                        <div class="education-icon-fallback" style="display:none;">
+                            <i class="fas fa-school"></i>
+                        </div>
+                    </div>
+                    <div class="education-content">
+                        <div class="education-header">
+                            <h3>Secondary School Certificate (SSC)</h3>
+                            <span class="education-institution">Kendriya Vidyalaya No. 3, Patiala Cantt</span>
+                            <span class="education-period">2017</span>
+                            <span class="education-cgpa">CGPA: 9.4</span>
                         </div>
                     </div>
                 </div>
