Remove Nitin button and add Internship section with HighRadius Technologies details

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
                 <li><a href="#experience" class="nav-link">Experience</a></li>
+                <li><a href="#internship" class="nav-link">Internship</a></li>
                 <li><a href="#education" class="nav-link">Education</a></li>
                 <li><a href="#skills" class="nav-link">Skills</a></li>
                 <li><a href="#projects" class="nav-link">Projects</a></li>
@@ -43,10 +44,7 @@
                 <p class="hero-subtitle">Java Backend Developer & DevOps Engineer</p>
                 <p class="hero-description">Building scalable microservices, REST APIs, and cloud-native automation solutions</p>
                 <div class="hero-buttons">
-                    <a href="https://NITIN-SINGH-2611.github.io/Portfolio_Nitin/" class="btn btn-primary portfolio-link" id="portfolioLink">
-                        <i class="fas fa-globe"></i> Nitin
-                    </a>
-                    <a href="#projects" class="btn btn-secondary">View My Work</a>
+                    <a href="#projects" class="btn btn-primary">View My Work</a>
                     <a href="#contact" class="btn btn-secondary">Get In Touch</a>
                 </div>
                 <div class="social-links">
@@ -149,6 +147,41 @@
                             <ul>
                                 <li>Collaborated closely with PMO teams, MUT testers, SIT teams, and Replica teams to coordinate testing cycles, prioritize defect resolution, and ensure smooth production releases under strict delivery timelines.</li>
                                 <li>Demonstrated strong ownership by managing high-pressure deadlines, aligning deliverables with PMO requirements, and ensuring timely bug fixes across environments.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Internship Section -->
+    <section id="internship" class="internship">
+        <div class="container">
+            <h2 class="section-title">Internship</h2>
+            <div class="internship-timeline">
+                <div class="internship-item">
+                    <div class="internship-header">
+                        <div class="internship-company">
+                            <h3>HighRadius Technologies</h3>
+                            <span class="internship-period">Jan 2022 – Oct 2022</span>
+                        </div>
+                    </div>
+                    <div class="internship-content">
+                        <div class="internship-details">
+                            <ul class="internship-list">
+                                <li>
+                                    <i class="fas fa-code"></i>
+                                    <span>Developed backend automation workflows using Java and Python to streamline enterprise financial operations.</span>
+                                </li>
+                                <li>
+                                    <i class="fas fa-plug"></i>
+                                    <span>Created REST APIs with robust database integration and transaction management.</span>
+                                </li>
+                                <li>
+                                    <i class="fas fa-sync-alt"></i>
+                                    <span>Participated in Agile development cycles with continuous integration testing and version control best practices.</span>
+                                </li>
                             </ul>
                         </div>
                     </div>
