Align Experience and Internship sections side by side in parallel layout

--- a/index.html
+++ b/index.html
@@ -117,76 +117,77 @@
         </div>
     </section>
 
-    <!-- Experience Section -->
-    <section id="experience" class="experience">
+    <!-- Experience & Internship Section -->
+    <section class="experience-internship-wrapper">
         <div class="container">
-            <h2 class="section-title">Professional Experience</h2>
-            <div class="experience-timeline">
-                <div class="experience-item">
-                    <div class="experience-header">
-                        <div class="experience-company">
-                            <h3>JIO Platforms Limited</h3>
-                            <span class="experience-period">Oct 2023 – Present</span>
+            <!-- Experience Section -->
+            <section id="experience" class="experience">
+                <h2 class="section-title">Professional Experience</h2>
+                <div class="experience-timeline">
+                    <div class="experience-item">
+                        <div class="experience-header">
+                            <div class="experience-company">
+                                <h3>JIO Platforms Limited</h3>
+                                <span class="experience-period">Oct 2023 – Present</span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="experience-content">
-                        <div class="experience-project">
-                            <h4><i class="fas fa-project-diagram"></i> Project: Defect Dashboard (React)</h4>
-                            <p>Designed and developed a real-time defect monitoring dashboard using React, enabling engineering teams to track production issues more efficiently and reducing defect triage time by <strong>35%</strong>.</p>
-                        </div>
-                        <div class="experience-project">
-                            <h4><i class="fas fa-chart-bar"></i> Project: EDA for Production Defects</h4>
-                            <p>Built automated data analysis pipelines using Python and Jupyter Notebook to extract, analyze, and restructure large volumes of production defect data, improving root-cause analysis speed by <strong>40%</strong> and enhancing reporting accuracy.</p>
-                        </div>
-                        <div class="experience-project">
-                            <h4><i class="fas fa-cogs"></i> Project: BAU Enhancements</h4>
-                            <p>Delivered continuous backend improvements and production fixes across multiple releases, resolving critical defects and improving overall system stability by <strong>25%</strong>.</p>
-                        </div>
-                        <div class="experience-achievements">
-                            <h4><i class="fas fa-users"></i> Collaboration & Leadership</h4>
-                            <ul>
-                                <li>Collaborated closely with PMO teams, MUT testers, SIT teams, and Replica teams to coordinate testing cycles, prioritize defect resolution, and ensure smooth production releases under strict delivery timelines.</li>
-                                <li>Demonstrated strong ownership by managing high-pressure deadlines, aligning deliverables with PMO requirements, and ensuring timely bug fixes across environments.</li>
-                            </ul>
+                        <div class="experience-content">
+                            <div class="experience-project">
+                                <h4><i class="fas fa-project-diagram"></i> Project: Defect Dashboard (React)</h4>
+                                <p>Designed and developed a real-time defect monitoring dashboard using React, enabling engineering teams to track production issues more efficiently and reducing defect triage time by <strong>35%</strong>.</p>
+                            </div>
+                            <div class="experience-project">
+                                <h4><i class="fas fa-chart-bar"></i> Project: EDA for Production Defects</h4>
+                                <p>Built automated data analysis pipelines using Python and Jupyter Notebook to extract, analyze, and restructure large volumes of production defect data, improving root-cause analysis speed by <strong>40%</strong> and enhancing reporting accuracy.</p>
+                            </div>
+                            <div class="experience-project">
+                                <h4><i class="fas fa-cogs"></i> Project: BAU Enhancements</h4>
+                                <p>Delivered continuous backend improvements and production fixes across multiple releases, resolving critical defects and improving overall system stability by <strong>25%</strong>.</p>
+                            </div>
+                            <div class="experience-achievements">
+                                <h4><i class="fas fa-users"></i> Collaboration & Leadership</h4>
+                                <ul>
+                                    <li>Collaborated closely with PMO teams, MUT testers, SIT teams, and Replica teams to coordinate testing cycles, prioritize defect resolution, and ensure smooth production releases under strict delivery timelines.</li>
+                                    <li>Demonstrated strong ownership by managing high-pressure deadlines, aligning deliverables with PMO requirements, and ensuring timely bug fixes across environments.</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </section>
+            </section>
 
-    <!-- Internship Section -->
-    <section id="internship" class="internship">
-        <div class="container">
-            <h2 class="section-title">Internship</h2>
-            <div class="internship-timeline">
-                <div class="internship-item">
-                    <div class="internship-header">
-                        <div class="internship-company">
-                            <h3>HighRadius Technologies</h3>
-                            <span class="internship-period">Jan 2022 – Oct 2022</span>
+            <!-- Internship Section -->
+            <section id="internship" class="internship">
+                <h2 class="section-title">Internship</h2>
+                <div class="internship-timeline">
+                    <div class="internship-item">
+                        <div class="internship-header">
+                            <div class="internship-company">
+                                <h3>HighRadius Technologies</h3>
+                                <span class="internship-period">Jan 2022 – Oct 2022</span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="internship-content">
-                        <div class="internship-details">
-                            <ul class="internship-list">
-                                <li>
-                                    <i class="fas fa-code"></i>
-                                    <span>Developed backend automation workflows using Java and Python to streamline enterprise financial operations.</span>
-                                </li>
-                                <li>
-                                    <i class="fas fa-plug"></i>
-                                    <span>Created REST APIs with robust database integration and transaction management.</span>
-                                </li>
-                                <li>
-                                    <i class="fas fa-sync-alt"></i>
-                                    <span>Participated in Agile development cycles with continuous integration testing and version control best practices.</span>
-                                </li>
-                            </ul>
+                        <div class="internship-content">
+                            <div class="internship-details">
+                                <ul class="internship-list">
+                                    <li>
+                                        <i class="fas fa-code"></i>
+                                        <span>Developed backend automation workflows using Java and Python to streamline enterprise financial operations.</span>
+                                    </li>
+                                    <li>
+                                        <i class="fas fa-plug"></i>
+                                        <span>Created REST APIs with robust database integration and transaction management.</span>
+                                    </li>
+                                    <li>
+                                        <i class="fas fa-sync-alt"></i>
+                                        <span>Participated in Agile development cycles with continuous integration testing and version control best practices.</span>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
         </div>
     </section>
 
