Add Certifications section with 5 certifications

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li><a href="#education" class="nav-link">Education</a></li>
                 <li><a href="#skills" class="nav-link">Skills</a></li>
                 <li><a href="#projects" class="nav-link">Projects</a></li>
+                <li><a href="#certifications" class="nav-link">Certifications</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
             <div class="hamburger" id="hamburger">
@@ -375,6 +376,64 @@
                             <span>PostgreSQL</span>
                             <span>Prisma</span>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Certifications Section -->
+    <section id="certifications" class="certifications">
+        <div class="container">
+            <h2 class="section-title">Certifications</h2>
+            <div class="certifications-grid">
+                <div class="certification-card">
+                    <div class="certification-icon">
+                        <i class="fab fa-google"></i>
+                    </div>
+                    <div class="certification-content">
+                        <h3>Jio Certified Google Cloud Platform Professional</h3>
+                        <p class="certification-issuer">Jio & Google Cloud</p>
+                    </div>
+                </div>
+
+                <div class="certification-card">
+                    <div class="certification-icon">
+                        <i class="fab fa-linkedin"></i>
+                    </div>
+                    <div class="certification-content">
+                        <h3>DevOps Foundations</h3>
+                        <p class="certification-issuer">LinkedIn</p>
+                    </div>
+                </div>
+
+                <div class="certification-card">
+                    <div class="certification-icon">
+                        <i class="fas fa-robot"></i>
+                    </div>
+                    <div class="certification-content">
+                        <h3>Prompt Engineering (GenAI)</h3>
+                        <p class="certification-issuer">Generative AI</p>
+                    </div>
+                </div>
+
+                <div class="certification-card">
+                    <div class="certification-icon">
+                        <i class="fab fa-java"></i>
+                    </div>
+                    <div class="certification-content">
+                        <h3>Oracle Java: Getting Started</h3>
+                        <p class="certification-issuer">Oracle</p>
+                    </div>
+                </div>
+
+                <div class="certification-card">
+                    <div class="certification-icon">
+                        <i class="fab fa-python"></i>
+                    </div>
+                    <div class="certification-content">
+                        <h3>Python</h3>
+                        <p class="certification-issuer">University of Michigan</p>
                     </div>
                 </div>
             </div>
