Update Projects section with Student Information Management System, Online Examination System, and Hospital Management System

--- a/index.html
+++ b/index.html
@@ -324,60 +324,48 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
-                        <i class="fas fa-shopping-cart"></i>
+                        <i class="fas fa-user-graduate"></i>
                     </div>
                     <div class="project-content">
-                        <h3>E-Commerce Platform</h3>
-                        <p>A full-featured e-commerce solution with shopping cart, payment integration, and admin dashboard.</p>
+                        <h3>Student Information Management System</h3>
+                        <p>Built a centralized platform to manage student records, attendance, courses, grades, and financial data. Implemented role-based authentication, database normalization, and performance-optimized SQL queries.</p>
                         <div class="project-tech">
-                            <span>React</span>
-                            <span>Node.js</span>
-                            <span>MongoDB</span>
+                            <span>Java</span>
+                            <span>JDBC</span>
+                            <span>MySQL</span>
+                            <span>Swing</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="project-card">
                     <div class="project-image">
-                        <i class="fas fa-tasks"></i>
+                        <i class="fas fa-laptop-code"></i>
                     </div>
                     <div class="project-content">
-                        <h3>Task Management App</h3>
-                        <p>A collaborative task management application with real-time updates and team collaboration features.</p>
+                        <h3>Online Examination System</h3>
+                        <p>Developed a secure web-based examination platform with timed assessments and automated evaluation. Designed dynamic reporting modules for performance analysis and academic insights.</p>
                         <div class="project-tech">
-                            <span>Vue.js</span>
-                            <span>Express</span>
-                            <span>Socket.io</span>
+                            <span>Java</span>
+                            <span>JSP</span>
+                            <span>Servlets</span>
+                            <span>MySQL</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="project-card">
                     <div class="project-image">
-                        <i class="fas fa-chart-line"></i>
+                        <i class="fas fa-hospital"></i>
                     </div>
                     <div class="project-content">
-                        <h3>Analytics Dashboard</h3>
-                        <p>An interactive analytics dashboard with data visualization, reports, and real-time metrics.</p>
+                        <h3>Hospital Management System</h3>
+                        <p>Engineered a complete hospital operations system for patient management, scheduling, billing, and medical records. Improved data consistency through transactional processing and modular service architecture.</p>
                         <div class="project-tech">
-                            <span>React</span>
-                            <span>D3.js</span>
-                            <span>Python</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-image">
-                        <i class="fas fa-blog"></i>
-                    </div>
-                    <div class="project-content">
-                        <h3>Blog Platform</h3>
-                        <p>A modern blogging platform with markdown support, comments, and SEO optimization.</p>
-                        <div class="project-tech">
-                            <span>Next.js</span>
-                            <span>PostgreSQL</span>
-                            <span>Prisma</span>
+                            <span>Java</span>
+                            <span>JDBC</span>
+                            <span>MySQL</span>
+                            <span>JavaFX</span>
                         </div>
                     </div>
                 </div>
