--- a/index.html
+++ b/index.html
@@ -281,36 +281,52 @@
             <h2 class="section-title">Skills & Technologies</h2>
             <div class="skills-grid">
                 <div class="skill-category">
-                    <h3><i class="fas fa-code"></i> Backend Development</h3>
+                    <h3><i class="fas fa-code"></i> Languages</h3>
                     <div class="skill-items">
                         <span class="skill-tag">Java</span>
+                        <span class="skill-tag">Python</span>
+                        <span class="skill-tag">SQL</span>
+                        <span class="skill-tag">JSP</span>
+                    </div>
+                </div>
+                <div class="skill-category">
+                    <h3><i class="fas fa-server"></i> Backend Frameworks</h3>
+                    <div class="skill-items">
                         <span class="skill-tag">Spring Boot</span>
-                        <span class="skill-tag">Microservices</span>
                         <span class="skill-tag">REST APIs</span>
-                        <span class="skill-tag">JPA/Hibernate</span>
-                        <span class="skill-tag">Maven/Gradle</span>
+                        <span class="skill-tag">SOAP APIs</span>
                     </div>
                 </div>
                 <div class="skill-category">
-                    <h3><i class="fas fa-cloud"></i> Cloud & DevOps</h3>
+                    <h3><i class="fas fa-database"></i> Databases</h3>
                     <div class="skill-items">
-                        <span class="skill-tag">Azure Cloud</span>
-                        <span class="skill-tag">GitHub Actions</span>
-                        <span class="skill-tag">CI/CD Pipelines</span>
-                        <span class="skill-tag">Docker</span>
-                        <span class="skill-tag">Kubernetes</span>
-                        <span class="skill-tag">Jenkins</span>
-                    </div>
-                </div>
-                <div class="skill-category">
-                    <h3><i class="fas fa-database"></i> Databases & Tools</h3>
-                    <div class="skill-items">
-                        <span class="skill-tag">Neo4j</span>
-                        <span class="skill-tag">PostgreSQL</span>
                         <span class="skill-tag">MySQL</span>
-                        <span class="skill-tag">MongoDB</span>
+                        <span class="skill-tag">Neo4j</span>
+                    </div>
+                </div>
+                <div class="skill-category">
+                    <h3><i class="fas fa-tools"></i> Dev Tools</h3>
+                    <div class="skill-items">
                         <span class="skill-tag">Git</span>
+                        <span class="skill-tag">Docker</span>
+                        <span class="skill-tag">Maven</span>
+                    </div>
+                </div>
+                <div class="skill-category">
+                    <h3><i class="fas fa-cloud"></i> Cloud</h3>
+                    <div class="skill-items">
+                        <span class="skill-tag">Microsoft Azure</span>
+                        <span class="skill-tag">Google Cloud</span>
+                    </div>
+                </div>
+                <div class="skill-category">
+                    <h3><i class="fas fa-cogs"></i> Other</h3>
+                    <div class="skill-items">
                         <span class="skill-tag">Linux</span>
+                        <span class="skill-tag">Microservices</span>
+                        <span class="skill-tag">CI/CD</span>
+                        <span class="skill-tag">OOP</span>
+                        <span class="skill-tag">Data Structures</span>
                     </div>
                 </div>
             </div>
