--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <p class="hero-description">Building scalable microservices, REST APIs, and cloud-native automation solutions</p>
                 <div class="hero-buttons">
                     <a href="#projects" class="btn btn-primary">View My Work</a>
-                    <a href="Nitin.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-secondary resume-btn">
+                    <a href="Nitin.pdf?v=2" target="_blank" rel="noopener noreferrer" class="btn btn-secondary resume-btn" download="Nitin_Singh_Samant_Resume.pdf">
                         <i class="fas fa-file-pdf"></i> Download Resume
                     </a>
                     <a href="#contact" class="btn btn-secondary">Get In Touch</a>
