Update resume to Updated-Latest.pdf and update professional summary in About section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <p class="hero-description">Building scalable microservices, REST APIs, and cloud-native automation solutions</p>
                 <div class="hero-buttons">
                     <a href="#projects" class="btn btn-primary">View My Work</a>
-                    <a href="Nitin.pdf?v=2" target="_blank" rel="noopener noreferrer" class="btn btn-secondary resume-btn" download="Nitin_Singh_Samant_Resume.pdf">
+                    <a href="Updated-Latest.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-secondary resume-btn" download="Nitin_Singh_Samant_Resume.pdf">
                         <i class="fas fa-file-pdf"></i> Download Resume
                     </a>
                     <a href="#contact" class="btn btn-secondary">Get In Touch</a>
@@ -83,16 +83,22 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>
-                        I'm a results-driven Java Backend Engineer with expertise in designing and developing scalable Spring Boot 
-                        microservices, RESTful APIs, and enterprise backend systems. With a strong foundation in object-oriented 
-                        programming, data structures, SQL optimization, and system integration, I deliver high-performance, reliable, 
-                        and maintainable software solutions.
+                        I'm a dedicated Java Backend Engineer with 2+ years of industry experience at Jio Platforms and over 4 years 
+                        of hands-on experience in Java development. I specialize in building scalable Spring Boot–based enterprise 
+                        applications, designing robust RESTful APIs, and developing SQL-driven backend systems that power critical 
+                        business operations.
                     </p>
                     <p>
-                        My hands-on experience includes building CI/CD pipelines, containerization, and cloud deployment on Microsoft 
-                        Azure. I specialize in creating robust backend services that handle complex business logic while maintaining 
-                        system reliability and scalability. My approach combines technical excellence with practical problem-solving 
-                        to drive business value.
+                        My expertise spans the full software development lifecycle—from designing microservices architecture to 
+                        production support and continuous enhancement. I've successfully contributed to defect resolution, system 
+                        optimization, and backend improvements that directly impact business outcomes. With hands-on experience in 
+                        CI/CD pipelines and automated deployments on Microsoft Azure, I bridge the gap between development and 
+                        operations to ensure reliable, scalable solutions.
+                    </p>
+                    <p>
+                        Beyond traditional development, I leverage Prompt Engineering to accelerate development workflows and enhance 
+                        solution design. Known for my reliability, ownership mindset, and collaborative approach, I thrive in 
+                        cross-functional teams where I can contribute to both technical excellence and business success.
                     </p>
                     <p>
                         <strong>Date of Birth:</strong> November 26, 2001
